zwischenspeichern von weiteren kleinen Änderungen

--- a/Aufgaben/Aufgabe03/About_me.html
+++ b/Aufgaben/Aufgabe03/About_me.html
@@ -14,9 +14,10 @@
 <body>
    
     <div id="navbar">
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="About_me.html">About_me</a>
+        
         <a href="Contacts.html">Contacts</a>
+        <a href="About_me.html"><strong>About_me</strong></a>
+        <a href="Portfolio.html">Portfolio</a>
       </div>
    
     <header>
