--- a/Aufgaben/Aufgabe03/Contacts.html
+++ b/Aufgaben/Aufgabe03/Contacts.html
@@ -17,9 +17,9 @@
 <body>
   
     <div id="navbar">
-        <a href="Portfolio.html">Portfolio</a>
+        <a href="Contacts.html"><strong>Contacts</strong></a>
         <a href="About_me.html">About_me</a>
-        <a href="Contacts.html">Contacts</a>
+        <a href="Portfolio.html">Portfolio</a>
       </div>
   
     <header>
