--- a/Aufgaben/Aufgabe03/Portfolio.html
+++ b/Aufgaben/Aufgabe03/Portfolio.html
@@ -11,14 +11,14 @@
 <body>
 
     <div id="navbar">
-        <a href="Portfolio.html">Portfolio</a>
-        <a href="About_me.html">About_me</a>
         <a href="Contacts.html">Contacts</a>
+        <a href="About_me.html">About_me</a>
+        <a href="Portfolio.html"><strong>Portfolio</strong></a>
       </div>
 
     <header>
 
-    <h1><em>Bissl was zum guggen</em></h1>
+    <h1><em>Portfolio</em></h1>
     <br>
     <br>
 </header>
