Bis auf die fehlerkorektur alles fertig

--- a/Aufgaben/Aufgabe03/About_me.html
+++ b/Aufgaben/Aufgabe03/About_me.html
@@ -12,45 +12,57 @@
 
 
 <body>
-   
-    <div id="navbar">
-        
-        <a href="Contacts.html">Contacts</a>
-        <a href="About_me.html"><strong>About_me</strong></a>
-        <a href="Portfolio.html">Portfolio</a>
-      </div>
-   
-    <header>
-        <h1><em>muss man das wissen?</em></h1>
-        <br>
-        <br>
 
+    <header>
+
+        <h1 id="Portfolio"><em>P<span id="uber">o</span>rtfolio</em></h1>
+        <br>
+        <br>
+        <div class="Absatz">
+
+            Hier könnte Ihre Werbung stehen.
+            Dazu nur bei mir melden über das Kontaktformular oder einfach über Facebook
+            <br>
+
+            <a href="https://de-de.facebook.com/jan.christmeier.5"><img class="link" src="icon.png" alt="" width="40px"
+                    height="40px" /></a>
+
+
+        </div>
+
+        <br>
+        <br>
     </header>
+
+
+    <div id="navbar">
+
+        <a href="Contacts.html">Contacts</a>
+        <a href="About_me.html"><strong><u>About_me</u></strong></a>
+        <a href="Portfolio.html">Portfolio</a>
+    </div>
+
+
 
     <br>
 
-    <h1 id=Anfang> Das bin ich</h1>
+    <h2 id=Anfang> Das bin ich</h2>
     <img src="Bild.jpg" alt="Profilbild">
     <p><i>So sehe ich aus</i></p>
 
     <h2>Mein Studium</h2>
     <p><b>Ich Studiere an der HFU in Furtwangen</b>
         <hr>Link:<a href="https://www.hs-furtwangen.de/">Zur Hochschule</a>
-    <p><small> man will, kann man da sogar studieren</small></p>
+    <p><small> wenn man will, kann man da sogar studieren</small></p>
     <p>
         <img src="Download.jpg" alt="HFU">
     </p>
 
 
-    <h3>Weitere Infos rund um mich</h3>
-    <hr>
-    <a href="Portfolio.html">Portfolio</a>
-    <hr>
-    <a href="Contacts.html">Contacts</a>
-    <hr>
 
 
-    <a href="#Anfang"><u> Seitenanfang</u></a>
+
+    <a href="#Anfang"><u> zum Seitenanfang</u></a>
 </body>
 
 
