--- a/Aufgaben/Aufgabe03/Contacts.html
+++ b/Aufgaben/Aufgabe03/Contacts.html
@@ -4,49 +4,64 @@
 <head>
     <link rel="stylesheet" href="Style.css">
     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontaktmöglichkeiten</title>
 </head>
 
 
-   
-   
 
 
 
 <body>
-  
-    <div id="navbar">
-        <a href="Contacts.html"><strong>Contacts</strong></a>
-        <a href="About_me.html">About_me</a>
-        <a href="Portfolio.html">Portfolio</a>
-      </div>
-  
+
     <header>
 
+        <h1 id="Portfolio"><em>P<span id="uber">o</span>rtfolio</em></h1>
+        <br>
+        <br>
+        <div class="Absatz">
+
+            Hier könnte Ihre Werbung stehen.
+            Dazu nur bei mir melden über das Kontaktformular oder einfach über Facebook
+            <br>
+
+            <a href="https://de-de.facebook.com/jan.christmeier.5"><img class="link" src="icon.png" alt="" width="40px"
+                    height="40px" /></a>
+
+
+        </div>
+
+        <br>
+        <br>
+    </header>
+
+
+    <div id="navbar">
+        <a href="Contacts.html"><strong><u>Contacts</u></strong></a>
+        <a href="About_me.html">About_me</a>
+        <a href="Portfolio.html">Portfolio</a>
+    </div>
+
+
+
+
+    <!--<div class="Formular">-->
     <h2>Kontakt</h2>
-   </header>
-   
-    <h1 id=Anfang> <small>Kontaktmöglichkeiten</small></h1>
-    <p> <a href=https://de-de.facebook.com/jan.christmeier.5> <i>Facebook</i> </a></p>
-
-
-    <p><b>E-Mail:</b> <u>Jan97@kabelmail.de</u></p>
-
+    <br>
+    <p class="Formular_Daten">Vorname</p><br>
+    <p class="Formular_Daten">Nachname</p><br>
+    <p class="Formular_Daten">E-Mail</p><br>
+    <p class="Formular_Nachricht">Nachricht</p>
     <br>
 
-    <h4><q>weitere möglichkeiten gibt es leider nicht mich über Social Media zu erreichen</q></h4>
+
+    <p id="Copie">Durch das Absenden dieser Nachricht <br> akzeptiere ich den Datenschutz</p>
 
 
-    
-        <h3>Weitere Infos rund um mich</h3>
-        <hr>
-        <a href="Portfolio.html">Portfolio</a>
-            <hr>
-            <a href="About_me.html">About me</a>
-                <hr>
-    
-
+    <p class="senden">Senden</p>
+    <br>
+    <br>
+    <hr>
     <a href="#Anfang"><u>Zum Seitenanfang</u></a>
 </body>
 
