--- a/Aufgaben/Aufgabe03/Portfolio.html
+++ b/Aufgaben/Aufgabe03/Portfolio.html
@@ -11,50 +11,60 @@
 <body>
 
     <div id="navbar">
-        <a href="Contacts.html">Contacts</a>
-        <a href="About_me.html">About_me</a>
-        <a href="Portfolio.html"><strong>Portfolio</strong></a>
-      </div>
+        <a class="nav" href="Contacts.html">Contacts</a>
+        <a class="nav" href="About_me.html">About_me</a>
+        <a class="nav" href="Portfolio.html"><strong><u>Portfolio</u></strong></a>
+    </div>
 
     <header>
 
-    <h1><em>Portfolio</em></h1>
+        <h1 id="Portfolio"><em>P<span id="uber">o</span>rtfolio</em></h1>
+        <br>
+        <br>
+        <div class="Absatz">
+
+            Hier könnte Ihre Werbung stehen.
+            Dazu nur bei mir melden über das Kontaktformular oder einfach über Facebook
+            <br>
+
+            <a href="https://de-de.facebook.com/jan.christmeier.5"><img class="link" src="icon.png" alt="" width="40px"
+                    height="40px" /></a>
+
+
+        </div>
+
+        <br>
+        <br>
+    </header>
+
+
+
+    <h3 id=Anfang> Ich wäre jetzt so gerne da</h3>
+    <img src="Bild_Landschaft.jpg" alt="Bild_Landschaft">
+
+
+    <h3>Oder auch hier</h3>
+
+
+    <p>
+        <audio controls>
+            <source src="Ocean_Waves.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+    </p>
+    <h3>dafür sitze ich hier fest</h3>
+
+    <video controls>
+        <source src="C0056.mp4" type="video/mp4">
+        Kein Video unterstützt
+    </video>
     <br>
+
+
+
+
     <br>
-</header>
-
-
-<h3 id=Anfang> Ich wäre jetzt so gerne da</h3>
-<img src="Bild_Landschaft.jpg" alt="Bild_Landschaft"  >
-
-
-<h2>Oder auch hier</h2>
-
-
-<p>
-<audio controls>
-<source src="Ocean_Waves.mp3" type="audio/mp3">
-Your browser does not support the audio element.
-</audio>
-</p>
-<h2><i>dafür sitze ich hier fest</i> </h2>
-
-<video controls>
-    <source src="C0056.mp4" type="video/mp4">
-    Kein Video unterstützt
-</video>
-<br>
-
-<h3><b>Weitere Infos rund um mich</b></h3>
-<hr>
-<a href="About_me.html">About me</a>
-<hr>
-<a href="Contacts.html">Contacts</a>
-<hr>
-
-
-
-<a href="#Anfang"><u>Zum Seitenanfang</u></a>
+    <a href="#Anfang"><u>Zum Seitenanfang</u></a>
 
 </body>
 
