Fehler Korrigiert und Abgabe

--- a/Aufgaben/Aufgabe03/Portfolio.html
+++ b/Aufgaben/Aufgabe03/Portfolio.html
@@ -27,8 +27,8 @@
             Dazu nur bei mir melden über das Kontaktformular oder einfach über Facebook
             <br>
 
-            <a href="https://de-de.facebook.com/jan.christmeier.5"><img class="link" src="icon.png" alt="" width="40px"
-                    height="40px" /></a>
+            <a href="https://de-de.facebook.com/jan.christmeier.5"><img class="link" src="icon.png" alt="" width="40"
+                    height="40" /></a>
 
 
         </div>
