--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 </head>
 <body>
 	<a href="https://github.com/Pretteter1/GIS-So-Se-2020/issues" target="_blank">Issues</a>
+	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe03/Portfolio.html" target="_blank">Aufgabe_03_2020_05_15</a>
 	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe02/Portfolio.html" target="_blank">Aufgabe_02_2020_05_08</a>
 	<a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe02/Tags.html" target="_blank">tags</a>
 	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe01/Aufgabe01.html" target="_blank">Aufgabe_01_2020_04_30</a>
