--- a/Aufgaben/Aufgabe04/Blöde_Sachen/Blöde_Sachen.html
+++ b/Aufgaben/Aufgabe04/Blöde_Sachen/Blöde_Sachen.html
@@ -20,7 +20,7 @@
             <li><a href="../Noch_Blödere_Sachen/noch_Blödere_Sachen.html">noch blödere Sachen </a></li>
             <p>
 
-                <img id="waarenkorb" src="../iconwarenkorb.png" alt="Warenkorb">
+                <input type="image" src="../iconwarenkorb.png" alt="Warenkorb">
 
             </p>
         </ul>
