--- a/Aufgaben/Aufgabe04/Blöde_Sachen/Blöde_Sachen.html
+++ b/Aufgaben/Aufgabe04/Blöde_Sachen/Blöde_Sachen.html
@@ -63,8 +63,8 @@
         </div>
         <div>
             <img src="Raumduft_Pizza.jpg" alt="">
-            <p>Wiebeim Italiener | 2,50€</p>
-            <p>Cool</p>
+            <p>Raumduft Pizza | 2,50€</p>
+            <p>Wie beim Italiener</p>
             <input type="button" value="Kaufen">
         </div>
         <div>
