Aufgabe fertig getellt

--- a/Aufgaben/Aufgabe04/Blöde_Sachen/Blöde_Sachen.html
+++ b/Aufgaben/Aufgabe04/Blöde_Sachen/Blöde_Sachen.html
@@ -46,7 +46,7 @@
             <input type="button" value="Kaufen">
         </div>
         <div>
-            <img src="DVD-Waschmaschine.jpg" alt="">
+            <img src="DVD-Waschmaschiene.jpg" alt="">
             <p>Waschmaschienen DVD | 2,99€</p>
             <p>Für den perfekten Familienabend</p>
             <input type="button" value="Kaufen">
