--- a/Aufgaben/Aufgabe05/Hauptseite.html
+++ b/Aufgaben/Aufgabe05/Hauptseite.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Der "dumme" Shop</title>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -25,29 +26,10 @@
     </header>
 
     <h2>Herzlich Willkommen beim Schrott-Händler</h2>
-
-    <div class="test">
-        <div>
-            <img src="Nichts.jpg" alt="">
-            <p>Nichts | 5,00€</p>
-            <p>Aktion!</p>
-            <input type="button" value="Kaufen">
-        </div>
-        <div>
-            <img src="Stift.jpg" alt="">
-            <p>Stift | 1,50€</p>
-            <p>Aktion!</p>
-            <input type="button" value="Kaufen">
-        </div>
-        <div>
-            <img src="Deko-Dinosaurier.jpg" alt="">
-            <p>Deko-Dino | 25€</p>
-            <p>Aktion!</p>
-            <input type="button" value="Kaufen">
-        </div>
-
-    </div>
-
+<main>
+    <div id="test">
+       </div>
+</main>
 
 
 
