--- a/Aufgaben/Aufgabe07/Hauptseite.html
+++ b/Aufgaben/Aufgabe07/Hauptseite.html
@@ -8,6 +8,7 @@
     <title>Der "dumme" Shop</title>
     <script src="script.js"></script>
     <script src="script_aktionen.js" defer></script>
+    <script src="package-lock.json" ></script>
 </head>
 
 <body>
@@ -23,10 +24,13 @@
             <!--<input id="Ware" type="image" src="iconwarenkorb.png" alt="Warenkorb">-->
 
         </ul>
-        <input id="Ware" type="image" src="iconwarenkorb.png" alt="Warenkorb">
+        <a id="Ware" href="Warenkorb.html"><img src="iconwarenkorb.png" alt="Wagen_Icon"></a>
     </header>
 
-    <h2>Herzlich Willkommen beim Schrott-Händler</h2>
+    <div id="überschrifth2">
+       
+    </div>
+   
     <main>
         <div id="test">
 
