--- a/Aufgaben/Aufgabe07/Warenkorb.html
+++ b/Aufgaben/Aufgabe07/Warenkorb.html
@@ -5,9 +5,10 @@
     <link rel="stylesheet" href="Style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Der "dumme" Shop</title>
+    <title>Der "dumme" Shop Warenkorb</title>
     <script src="script.js"></script>
-    <script src="script_aktionen.js" defer></script>
+    <script src="Warenkorb.js" defer></script>
+    <script src="package-lock.json" ></script>
 </head>
 
 <body>
@@ -23,10 +24,13 @@
             <!--<input id="Ware" type="image" src="iconwarenkorb.png" alt="Warenkorb">-->
 
         </ul>
-        <input id="Ware" type="image" src="iconwarenkorb.png" alt="Warenkorb">
+        <a id="Ware" href="Warenkorb.html"><img src="iconwarenkorb.png" alt="Wagen_Icon"></a>
     </header>
 
-    <h2>Herzlich Willkommen beim Schrott-Händler</h2>
+    <div id="überschrifth2">
+       
+    </div>
+   
     <main>
         <div id="test">
 
