--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 </head>
 <body>
 	<a href="https://github.com/Pretteter1/GIS-So-Se-2020/issues" target="_blank">Issues</a>
+	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe08/Aufgabe08.html" target="_blank">Aufgabe_08_2020_06_20</a>
 	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe07/Hauptseite.html" target="_blank">Aufgabe_07_2020_06_14</a>
 	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe06/Hauptseite.html" target="_blank">Aufgabe_06_2020_06_07</a>
 	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe05/Hauptseite.html" target="_blank">Aufgabe_05_2020_05_28</a>
