--- a/Aufgaben/Aufgabe09/Aufgabe09.html
+++ b/Aufgaben/Aufgabe09/Aufgabe09.html
@@ -14,9 +14,16 @@
 
         <input type="text" name="Name" placeholder="Name"><br>
         <input type="email" name="Email" placeholder="E-Mail"><br>
-        <button type="button" id="anmeldenbutton">anmelden</button>
-      
+        <br>
+        <br>
+        <br>
+        <button type="button" id="htmlButton">html</button>
+        <button type="button" id="jsonButton">json</button>
+
+
     </form>
+
+    <p id=ausgabe></p>
 </body>
 
 </html>
