--- a/Aufgaben/Klausur-Projekt/Verkäufer.html
+++ b/Aufgaben/Klausur-Projekt/Verkäufer.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="Style.css">
-	<script src="script_aktionen.js" defer></script>
-    <script src="package-lock.json" ></script>
-</head>
-<body>
-	
-	<nav>
-		<ul>
-		  <li>
-			<a href="Home.html">Home</a>
-		  </li>
-		  <li>
-			<a href="Shop.html">Eis kaufen</a>
-		  </li>
-		  <li>
-			<a href="Warenkorb.html">Waarenkorb</a>
-		  </li>
-		  <li>
-			<a href="Verkäufer.html">Bestellungen</a>
-		  </li>
-		</ul>
-	  </nav>
-
-
-	  <div id="test">
-<h1>Hallo</h1>
-
-	</div>
-
-
-
-
-</body>
-</html>
+	<head>
+		<title></title>
+		<script src="test.js" defer></script>
+	</head>
+	<body>
+		<h3>Bitte ausfüllen: </h3> <br>
+		
+		<form>
+		<input type="text" name="registration"> Registration <br>
+		<input type="text" name="name"> Name <br>
+		<input type="text" name="firstname"> Firstname<br>
+		
+		<button type="button" id="datenHinzufügen">Daten hinzufügen</button><br>
+		<button type="button" id="datenAnzeigen">Daten anzeigen</button><br>
+		</form>
+		
+		<h3>Datenbank:</h3><br>
+		<div id="serverAntwort"></div>
+		
+	</body>
+	</html>
