--- a/Aufgaben/Klausur-Projekt/Verkäufer.html
+++ b/Aufgaben/Klausur-Projekt/Verkäufer.html
@@ -5,14 +5,10 @@
 		<script src="test.js" defer></script>
 	</head>
 	<body>
-		<h3>Bitte ausfüllen: </h3> <br>
+		<h3>Daten holen </h3> <br>
 		
 		<form>
-		<input type="text" name="registration"> Registration <br>
-		<input type="text" name="name"> Name <br>
-		<input type="text" name="firstname"> Firstname<br>
-		
-		<button type="button" id="datenHinzufügen">Daten hinzufügen</button><br>
+				
 		<button type="button" id="datenAnzeigen">Daten anzeigen</button><br>
 		</form>
 		
