--- a/Aufgaben/Klausur-Projekt/Verkäufer.html
+++ b/Aufgaben/Klausur-Projekt/Verkäufer.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="stylesheet" href="style.css" >
 		<title></title>
 		<script src="test.js" defer></script>
 	</head>
-	<body>
+	<body >
+		<div id="body">
 		<h3>Daten holen </h3> <br>
 		
 		<form>
@@ -13,7 +15,6 @@
 		</form>
 		
 		<h3>Datenbank:</h3><br>
-		<div id="serverAntwort"></div>
 		
 	</body>
 	</html>
