So könnte  man es abgeben

--- a/Aufgaben/Klausur-Projekt/Verkäufer.html
+++ b/Aufgaben/Klausur-Projekt/Verkäufer.html
@@ -14,7 +14,7 @@
 		<button type="button" id="datenAnzeigen">Daten anzeigen</button><br>
 		</form>
 		
-		<h3>Datenbank:</h3><br>
+		<h3>Alle Bestellungen</h3><br>
 		
 	</body>
 	</html>
