--- a/Aufgaben/Klausur-Projekt/Verkäufer.html
+++ b/Aufgaben/Klausur-Projekt/Verkäufer.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link rel="stylesheet" href="style.css" >
-		<title></title>
-		<script src="test.js" defer></script>
-	</head>
-	<body >
-		<div id="body">
+
+<head>
+	<link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="test.js" defer></script>
+	<title>Verkäufer</title>
+</head>
+
+<body>
+	<div id="body">
 		<h3>Daten holen </h3> <br>
-		
+
 		<form>
-				
-		<button type="button" id="datenAnzeigen">Daten anzeigen</button><br>
+
+			<button type="button" id="datenAnzeigen">Daten anzeigen</button><br><br><br>
+			<button type="button" id="meme">Magst du Spaß?</button><br>
 		</form>
-		
+
 		<h3>Alle Bestellungen</h3><br>
-		
-	</body>
-	</html>
+	</div>
+</body>
+
+</html>
