--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,7 +13,8 @@ body {
 </head>
 <body>
 	<a href="https://github.com/Pretteter1/GIS-So-Se-2020/issues" target="_blank">Issues</a>
-	<!-- <br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Klausur-Projekt/Shop.html" target="_blank">Aufgabe_09_2020_06_28</a> -->
+	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Klausur-Projekt/Shop.html" target="_blank">Klausur-Shop</a>
+	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Klausur-Projekt/Verkäufer.html" target="_blank">Klausur-Verkäufer</a>
 	<br><a href="https://mongodbnetbrowser.herokuapp.com/?u=Test&p=qwertzui&a=uff.r1smf.mongodb.net&n=Test&c=Students" target="_blank">Aufgabe_10_2020_07_03</a>
 	<br><a href="https://pretteter1.github.io/GIS-So-Se-2020/Aufgaben/Aufgabe09/Aufgabe09.html" target="_blank">Aufgabe_09_2020_06_28</a>
 	<a href="https://github.com/Pretteter1/GIS-So-Se-2020/blob/master/Aufgaben/Aufgabe09/server.ts" target="_blank">Server</a>
